<resources tools:ignore="ExtraTranslation"
           xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">JardenAppClassses</string>
    
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <!-- Quiz apps -->
    <string name="audioMode">Audio Mode</string>
    <string name="cancel">Cancel</string>
    <string name="correctQueryStr">Correct?</string>
    <string name="emptyAnswer">please supply an answer</string>
    <string name="exit">Exit</string>
    <string name="fail">wrong! the right answer is: </string>
    <string name="goStr">Go</string>
    <string name="incorrect">wrong; try again</string>
    <string name="intValue">int value</string>
    <string name="learning_level">Learning Level</string>
    <string name="learnMode">Learn Mode</string>
    <string name="notes">Notes</string>
    <string name="noStr">No</string>
    <string name="numbersGame">Numbers Game</string>
    <string name="practiceMode">Practice Mode</string>
    <string name="qaStyle">Question Style</string>
    <string name="right">Right</string>
    <string name="selectTopic">Topic Mode</string>
    <string name="setCurrentIndex">Set Current Index</string>
    <string name="setTargetCorrects">Set Target Corrects</string>
    <string name="update">Update</string>
    <string name="wordLookup">Word Lookup</string>
    <string name="wrong">Wrong</string>
    <string name="yesStr">Yes</string>


</resources>