<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jarden.app.revisequiz.FreakWizFragment">

    <include layout="@layout/question_answer_textviews"/>

    <TextView
        android:id="@+id/statsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/spanishMargin"
        android:layout_marginBottom="@dimen/spanishMargin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goStr" />

    <LinearLayout
        android:id="@+id/selfMarkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/correctButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right" />

        <Button
            android:id="@+id/incorrectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong" />

        <!--
        <CheckBox
            android:id="@+id/notesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
            -->

    </LinearLayout>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/notesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:textSize="@dimen/helpTextFieldSize"/>

</LinearLayout>

